# netview

./: .gitignore  Makefile  README.md  ROADMAP.md  docker-compose.yml  import-dashboard.sh  monitoring-test.html  netview-dashboard.json  open-monitoring.sh  setup-grafana.sh  troubleshoot-monitoring.sh
backend/: device_cache.json  init_oui_db.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  auth.py  config.py  db.py  main.py  metrics.py  models.py  scheduler.py
backend/app/routers/: __init__.py  alerts.py  devices.py  interfaces.py  metrics.py  oui.py  topology.py  user_settings.py
backend/app/services/: __init__.py  device_cache.py  discovery.py  fast_discovery.py  hybrid_discovery.py  oui_database.py  polling.py  router_discovery.py  snmp.py  topology_builder.py  user_settings.py
backend/tests/: test_api_basic.py  test_bdd_discovery.py  test_devices_endpoints.py
backend/tests/features/: discovery.feature
config/: docker-compose.yml  podman-compose.yml  prometheus.yml
scripts/: download_oui.py  import-dashboard.sh  setup-grafana.sh  setup-podman.sh  start-monitoring-docker.sh  start-monitoring-podman.sh  test-cors.html  troubleshoot-monitoring-podman.sh  troubleshoot-monitoring.sh
ui/: index.html  package-lock.json  package.json  vite.config.ts  vitest.setup.ts
ui/src/: App.test.tsx  App.tsx  api.ts  main.tsx
