[tool.poetry]
name = "netview-backend"
version = "0.1.0"
description = "Local network monitoring and topology backend"
authors = ["NetView"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.114.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.34"
apscheduler = "^3.10.4"
prometheus-client = "^0.20.0"
pydantic = "^2.9.0"

[tool.poetry.group.snmp.dependencies]
pysnmp = "^4.4.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pytest-bdd = "^7.2.0"
httpx = "^0.27.2"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


